[package]
name = "control"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
rpc = { path = "../rpc" }
tokio = "1.43.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kos = { git = "https://github.com/kscalelabs/kos" }
reqwest = { version = "0.12.12", features = ["json"] }
futures = "0.3.31"
