[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
kos = { git = "https://github.com/kscalelabs/kos" }
prost = { version = "0.13.4", features = ["prost-derive"] }
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = ["full"] }
tonic = { version = "0.12", git = "https://github.com/kscalelabs/tonic-milkv" }
tracing = "0.1.41"
